# ded2018-stack-vm

./: .gitmodules  CMakeLists.txt
include/: argument_descriptors.h  assembler.h  fs_utils.h  instruction_set.h  jit_compiler.h  linker.h  objdump.h  object.h  oosf  processor.h  ram.h  virtual_machine.h
src/: assembler.cpp  assembler_main.cpp  context_switch.s  func_call.s  instruction_set_validator.cpp  jit_compiler.cpp  jit_main.cpp  linker.cpp  linker_main.cpp  objdump.cpp  objdump_main.cpp  object.cpp  processor.cpp  ram.cpp  virtual_machine.cpp  virtual_machine_main.cpp
